oppgaver/oppgave-4/deployment-6.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-pod
    version: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-pod
      version: default
  template:
    metadata:
      labels:
        app: demo-pod
        version: default
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: demo-pod
        image: scav/colour-service:any
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080 # I prod bør dette være annen port en hoved-port
          initialDelaySeconds: 20 # Venter før den begynner å sjekke om app'en er klar
          periodSeconds: 1 # Hvor ofte den sjekker
          failureThreshold: 5 # Hvor mange feil som skal til før den konkluderer..
        livenessProbe:
          httpGet:
            path: /health
            port: 8080 # I prod bør dette være annen port en hoved-port
          periodSeconds: 1 # Hvor ofte den sjekker
          failureThreshold: 5 # Hvor mange feil som skal til før den konkluderer..


        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "200m"
            memory: "100Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: demo-service
  labels:
    app: demo-pod
spec:
  selector:
    app: demo-pod
  ports:
  - port: 7070
    name: http
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-service
spec:
  rules:
    - http:
        paths:
          - path: "/xxxx"
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 7070
