oppgaver/oppgave-4/deployment-ingress-1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lb-service
spec:
  rules:
    - http:
        paths:
          - path: "/green"
            pathType: Prefix
            backend:
              service:
                name: demo-service-green
                port:
                  number: 7070
